[package]
edition = "2021"
name = "lapce-vue"
version = "0.0.1"
resolver = "2"

[target.'cfg(target_os = "wasi")'.dependencies]

# default deps for all lapce plugins
anyhow = "1.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
# lapce-plugin = { git = "https://github.com/lapce/lapce-plugin-rust.git", branch = "volt" }
lapce-plugin = { git = "https://github.com/panekj/lapce-plugin-rust.git", branch = "volt" }
toml = "0.5.9"
flate2 = "1.0.24"
tar-wasi = "0.4.38"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
